# annotation-utils

./: .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml
AnnotationUtils/: __init__.py  annotation_handler.py  annotation_manager.py  annotations.py  base_annotations.py  coco_annotations.py  yolo_annotations.py  yoloseg_annotations.py
annotation_utils/: __init__.py  annotations.py  base_annotations.py  coco_annotations.py  yoloseg_annotations.py
assets/: combineimages.py
example_data/: coral_mask1.npy  coral_mask2.npy  coral_mask3.npy  coral_mask4.npy
src/: annotation.py  annotation_handler.py  main.py
