[project]
name = "annotation-utils"
version = "1.0"
description = "provides easy ways to manipulate image annotations"
readme = "README.md"
authors = [{ name = "Joe Wilder" }]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["annotation_utils"]
include-package-data = true
